<resources>
    <string name="app_name">Spring20Runs</string>
    <string name="coordinatesTextView">Coordinates Go Here</string>
    <string name="title_activity_maps">Map</string>

    <string name="separator_main">:</string>
    <string name="separator_tenths">.</string>
    <string name="zero_value_1">0</string>
    <string name="zero_value_2">00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="map">View Map</string>
    <string name="content_text">Tracking your run . . .</string>
    <string name="stopwatch">View Stopwatch</string>
    <string name="default_notification_channel_id">default</string>
    <string name="location_permission_granted">Fine Location Permission Granted</string>
    <string name="no_gps">Unable to turn on GPS</string>
    <string name="high_accuracy_GPS">GPS on high accuracy</string>
</resources>
